--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -7,6 +7,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 24px;
+    padding-right: 24px;
     
   }
   
@@ -17,6 +19,7 @@
     left: 0;
     bottom: 0;
     background-color: transparent;
+    
   }
   
   #modal-content {
@@ -24,7 +27,7 @@
     background-color:white;
     border: 1px solid black;
     border-radius: 5px;
-    height: 500px;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 16px 16px 32px;
+}
 
-  }
