--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -35,16 +35,28 @@
 
 
 .text-input {
-    width: 305px;
-    margin-bottom: 17px;
-    --font-family-base: "helvetica neue",helvetica,arial,sans-serif;
-    --font-family-serif: georgia,times,serif;
+    display: flex;
+    align-items: center;
+    flex: 1 1 0%;
+    font-family: inherit;
+    font-size: 14px;
+    padding-left: 16px;
+    padding-right: 12px;  
 }
 
-.login-heading {
+#login-heading {
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+.login-message {
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    width: 305px;
 
 }
 
@@ -54,4 +66,8 @@
     border-right-color: rgba(0, 0, 0, 0.063);
     border-left-color: rgba(0, 0, 0, 0.063);
     margin: 24px -16px;
+}
+
+strong {
+    font-weight: bold;
 }
