--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -16,7 +16,7 @@
     min-height: 44px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    
+     padding: 0.25em 1.125em;
 }
 
 .loginmodal-button {
@@ -42,6 +42,7 @@
     font-size: 14px;
     padding-left: 16px;
     padding-right: 12px;  
+    width: 80%
 }
 
 #login-heading {
@@ -56,7 +57,7 @@
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
-    width: 305px;
+    width: 80%;
 
 }
 
@@ -70,4 +71,48 @@
 
 strong {
     font-weight: bold;
+}
+
+#new-user-message {
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    line-height: 1.25;
+    font-weight: 700;
+    font-size: 16px;
+    margin-bottom: 16px;
+}
+
+.create-account-button {
+    transition: color 0.2s ease 0s, border-color 0.2s ease 0s;
+    min-width: 14.5em;
+    padding: 0.25em 1.125em;
+    min-height: 44px;
+    font-weight: 700;
+    border-width: 2px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1;
+    background-color: transparent;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 99999px;
+    appearance: none;
+    color: rgb(0, 0, 0);
+}
+
+#terms-of-use {
+    font-size: 11px;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    width: 80%;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+   
 }
