--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -10,6 +10,8 @@
     color: black;
     text-decoration-line: none;
    font-family: Arial, Helvetica, sans-serif;
+   margin-left: 20px;
+   margin-bottom: 30px;
 
 }
 
