--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,22 @@
 @import "./reset.css";
 
 body {
-    margin: 10%;
+    margin: 0%;
    
+}
+.freeShipping-button {
+    border-style: none;
+    background-color: #C0DCF1;
+    margin-top: 0px;
+    width: 100%;
+    padding: 7px;
+    font-size: 14px;
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    width: 100%;
+    line-height: 1.25;
+    margin-bottom: 30px;
+  
+
 }
