--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -25,6 +25,8 @@
     border-style: none;
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    padding: 0;
 
 }
 
@@ -115,4 +117,12 @@ strong {
     display: flex;
     flex-direction: column;
    
+}
+
+#login-nav {
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    justify-content: flex-start;
 }
