--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,12 +1,12 @@
 .nav-links {
     display: flex;
-    justify-content: space-between;
-   font-family: Arial, Helvetica, sans-serif;
+    justify-content: space-evenly;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
 .home-link {
-    font-size: 28px;
+    font-size: 26px;
     color: black;
     text-decoration-line: none;
    font-family: Arial, Helvetica, sans-serif;
@@ -43,3 +43,5 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+
