styling header and nav bar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,23 +10,28 @@ body {
     background-color: #C0DCF1;
     margin-top: 0px;
     width: 100%;
-    padding: 7px;
     font-size: 14px;
     display: flex;
-    /* flex-direction: column; */
     justify-content: center;
     width: 100%;
     line-height: 1.25;
     margin-bottom: 30px;
-  
+    min-height: clamp(0px, 4.80769vw, 60px);
+    padding-bottom: 0.5em;
+    
+   
+}
 
+.freeShipping-text {
+  margin-top: 0.8em;
 }
 
 .icon {
     display: inline-block;
     width: 24px; 
     height: 24px;
-    font-size: 16px;
+    font-size: 24px;
+    transform: scaleX(-1);
     
   }
   
