--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -25,9 +25,10 @@
   #modal-content {
     position: absolute;
     background-color:white;
-    border: 1px solid black;
+    border: 1px solid rgb(221, 211, 211);
     border-radius: 5px;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 16px 16px 32px;
+    padding: 11px 5px 32px ;
+    
 }
 
