--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -39,11 +39,14 @@
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
+    flex-direction: column;
   
 
 }
 
-.loginmodal-button:hover {
+
+
+span:hover {
     text-decoration: 2px underline;
 }
 
