--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -34,6 +34,17 @@
   
 }
 
+.nav-icon {
+  height: 24px;
+  width: 24px;
+  flex-shrink: 0;
+  font-size: 24px;
+  margin-right: 12px;
+  margin-top: -0.125em;
+}
+
+
+
 #icon-container:hover #replacement-icon {
   display: inline-block;
 }
@@ -48,6 +59,7 @@
   top: 0;
   left: 0;
 }
+
 
 .nav1 {
     display: flex;
@@ -76,7 +88,9 @@ ul li {
   background-color: white;
   border-style: none;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
 }
+
 
 
 .dropdown {
