--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -1,27 +1,90 @@
-.signup-form {
+.signup-heading {
     display: flex;
     justify-content: center;
-    flex-direction: column;
-    margin: 50px;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    width: 100%;
+    line-height: 1.25;
+    font-weight: 700;
+    font-size: 16px;
+    border-bottom: 1px solid rgb(238, 238, 238);
+    min-height: 44px;
     align-items: center;
-    width: 352px;
-   
+    padding-bottom: 3px;
+    
     
 }
 
+.signup-form {
+    display: block;
+    justify-content: center;
+    flex-direction: column;
+    padding: 16px 18px 16px 18px ;    
+    align-items: center;
+    width: 421px;
+}
+
+.insider-logo {
+    display: block;
+    width: 201px;
+    height: 30px;
+    margin-bottom: 8px;
+    max-width: 100%;
+}
+
+p {
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.25em;
+}
+
+.fullname {
+    display: flex;
+    margin-left: -8px;
+    margin-right: -8px;
+}
 .name-input {
     display: flex;
-    width: 150px;
-    justify-content: center;
+    align-items: center;
+    flex: 1 1 0%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    padding-left: 8px;
+    padding-right: 8px;
+    color: rgb(0, 0, 0);
+    height: 44px;
+    background-color: rgb(255, 255, 255);
+    border-width: 1px;
+    border-color: rgb(204, 204, 204);
+    border-radius: 4px;
+    width: 100%;
 }
 
 .first-name {
-    margin-right: 20px;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-right: 10px;
+    width: 100%;
+    
 }
 
-.text-input {
-    position: relative;
-    width: 305px; /* Adjust the width value as needed */
+.last-name {
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-right: 14px;
+    width: 100%;
+
+}
+
+.signup-text-input {
+    position: relative; 
+    display: flex;
+    height: 44px;
+    background-color: rgb(255, 255, 255);
+    border-width: 1px;
+    border-color: rgb(204, 204, 204);
+    border-radius: 4px;
+    width: 100%;
     
   }
 
@@ -37,5 +100,26 @@
     font-family: Arial, Helvetica, sans-serif;
     
 }
+
+.footer {
+    display: block;
+    color: rgb(102, 102, 102);
+    font-size: 12px;
+    line-height: 1.25;
+    margin-top: 16px;
+}
+
+.footer p {
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    margin-bottom: 1em;
+    font-size: 12px;
+    text-align: left;
+    display: block;
+}
+
+
+
+
 
 
