--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -54,8 +54,7 @@ p {
     color: rgb(0, 0, 0);
     height: 44px;
     background-color: rgb(255, 255, 255);
-    border-width: 1px;
-    border-color: rgb(204, 204, 204);
+    border: 1px solid rgb(204, 204, 204);
     border-radius: 4px;
     width: 100%;
 }
@@ -81,8 +80,7 @@ p {
     display: flex;
     height: 44px;
     background-color: rgb(255, 255, 255);
-    border-width: 1px;
-    border-color: rgb(204, 204, 204);
+    border: 1px solid rgb(204, 204, 204);
     border-radius: 4px;
     width: 100%;
     
