--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -70,6 +70,10 @@
 
 }
 
+.nav1-icon-container {
+  padding-left: 12px;
+  padding-right: 12px;
+}
 
 
 #icon-container:hover #replacement-icon {
@@ -90,7 +94,7 @@
 
 .nav1 {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
     margin-right: 12px;
     margin-top: 12px;
@@ -132,8 +136,8 @@ ul li {
 
   padding-top: 20px;
   padding-bottom: 20px;
-  /* padding-left: 12px; */
-  /* padding-right: 12px; */
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 
@@ -192,7 +196,7 @@ ul li {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   
-  text-decoration: none;
+  text-decoration-line: none;
   width: 100%;
   line-height: 1.25;
   padding: 10px;
@@ -205,3 +209,5 @@ ul li {
   flex-wrap: wrap;
   
 }
+
+
