--- a/frontend/src/components/Product/Product.css
+++ b/frontend/src/components/Product/Product.css
@@ -33,7 +33,7 @@
 
 
 
-.image {
+.image-container {
     height: 500px;
     width: 500px;
 }
@@ -44,7 +44,7 @@
     width: 100%;
     font-size: 14px;
     line-height: 1.25;
-   
+   text-align: left;
     position: relative;
   
     
@@ -53,16 +53,19 @@
 .brand-index {
     font-size: 12px;
     font-weight: 700;
+    width: 100%;
+    
 }
 
 .price-index {
     display: flex;
-    text-align: left;
     font-size: 16px;
     font-weight: 700;
+    width: 100%
 }
 
 .show-link {
     text-decoration: none;
     color: black;
+    
 }
