--- a/frontend/src/components/Product/Product.css
+++ b/frontend/src/components/Product/Product.css
@@ -6,9 +6,14 @@
    
 }
 
+.show-page {
+    display: flex;
+    flex-direction: column;
+}
+
 .prod-sec1 {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: left;
     
 }
@@ -18,19 +23,43 @@
     color: black;
     font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 0px;
+    text-decoration: none;
+}
+
+.brand:hover {
+    text-decoration: underline;
 }
 
 .name-price-size {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    margin-top: 100px;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
   
 }
 
+
 .name {
-    margin-top: -100px;
+    font-size: 16px;
+    padding-bottom: 30px;
+}
+
+.price {
+    color: gray;
+    font-size: 12px;
+    width: 70%;
+    padding-bottom: 17px;
+}
+
+.price strong {
+    font-size: 16px;
+    color: black;
+}
+
+.size {
+    font-size: 14px;
 }
 
 .image-container img {
@@ -45,6 +74,43 @@
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.ingredients {
+    display: block;
+    margin-left: 17px;
+    
+}
+
+
+.ingredients button {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    background-color: transparent;
+    border: none;
+   
+}
+
+.ingredients h2 {
+    font-size: 20px;
+    font-weight: 700;
+
+}
+.ingredients div{
+    font-size: 20px;
+    font-weight: 700;
+
+}
+
+.ingredients p {
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 180px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    line-height: 1.8;
+    
 }
 
 
@@ -69,6 +135,8 @@
     font-size: 12px;
     font-weight: 700;
     width: 100%;
+    margin-bottom: 0px;
+   
     
 }
 
@@ -76,11 +144,16 @@
     display: flex;
     font-size: 16px;
     font-weight: 700;
-    width: 100%
+    width: 100%;
+    padding-top: 18px;
 }
 
 .show-link {
     text-decoration: none;
     color: black;
     width: 100%;
+}
+
+.show-link:hover {
+    text-decoration: underline;
 }
