--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -1,3 +1,4 @@
+
 #search-bar {
     display: flex;
     justify-content: center;
@@ -10,25 +11,68 @@
     flex-shrink: 1;
     flex-basis: 0%;
     margin-left: 30px;
-    
-    
-    
 }
 
-#search-input {
+.results-container {
     display: flex;
+    margin-top: 30px;
+    padding-right: 30px;
+}
+
+.result-details {
+    display: flex;
+    flex-direction: column;
+}
+
+.search-heading {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    padding-right: 30px;
+    padding-left: 30px;
+
+}
+
+
+.search-input {
+    display: flex;
+    justify-content: center;
     border-width: 0;
     background-color: transparent;
     padding-left: 36px;
     padding-right: 12px;
+    margin-top: 3px;
     font-size: 14px;
     align-items: center;
-    border-radius: 9999px;
-    flex-grow: 1;
+    border-radius: 9999px; 
+    flex-grow: 1; 
     flex-shrink: 1;
-    flex-basis: 0%;
-    
+    flex-basis: 0%; 
+    height: 80%;
+   
+}
+
+.search-results {
+    display: flex;
+    margin-right: 20px;
+    margin-left: 80px;
+    width: 50%;
+
 }
 
 
+
+.results-img img {
+    width: 250px;
+}
+
+.result-item {
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    line-height: 1.25;
+    text-align: left;
+    position: relative;
+}
 
