--- a/frontend/src/components/Product/Product.css
+++ b/frontend/src/components/Product/Product.css
@@ -2,20 +2,19 @@
     display: flex;
     margin: 200px;
     flex-wrap: wrap;
-   
-   
 }
 
 .show-page {
     display: flex;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 .prod-sec1 {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: left;
-    
+    padding-bottom: 20px;
 }
 
 .brand {
@@ -37,9 +36,7 @@
     margin-top: 100px;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-  
 }
-
 
 .name {
     font-size: 16px;
@@ -56,10 +53,12 @@
 .price strong {
     font-size: 16px;
     color: black;
+    text-decoration: none;
 }
 
 .size {
     font-size: 14px;
+    text-decoration: none;
 }
 
 .image-container img {
@@ -76,44 +75,6 @@
     justify-content: center;
 }
 
-.ingredients {
-    display: block;
-    margin-left: 17px;
-    
-}
-
-
-.ingredients button {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    background-color: transparent;
-    border: none;
-   
-}
-
-.ingredients h2 {
-    font-size: 20px;
-    font-weight: 700;
-
-}
-.ingredients div{
-    font-size: 20px;
-    font-weight: 700;
-
-}
-
-.ingredients p {
-    font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 180px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    line-height: 1.8;
-    
-}
-
-
 
 .index-item {
     display: flex;
@@ -121,14 +82,12 @@
     width: 25%;
     min-height: 354px;
     font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
     line-height: 1.25;
     text-align: left;
     position: relative;
     margin-right: 30px;
     padding: 24px 12px;
-    
-  
-    
 }
 
 .brand-index {
@@ -136,7 +95,6 @@
     font-weight: 700;
     width: 100%;
     margin-bottom: 0px;
-   
     
 }
 
@@ -146,14 +104,101 @@
     font-weight: 700;
     width: 100%;
     padding-top: 18px;
+    text-decoration-line: none;
 }
 
 .show-link {
     text-decoration: none;
     color: black;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .show-link:hover {
     text-decoration: underline;
 }
+
+.divider {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.063);
+   
+}
+
+.section h2 {
+    font-size: 20px;
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 17px;
+    margin-right: 17px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-left: 6px;
+}
+
+.section p {
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 180px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    line-height: 1.8;
+}
+
+
+.section-drop {
+    display: block;
+    margin-left: 17px;
+    margin-right: 17px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.section-drop button {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    background-color: transparent;
+    border: none;
+}
+
+.section-button h2 {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.section-drop div{
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.section-drop p {
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 180px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    line-height: 1.8;
+}
+
+.similar-products {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    margin-left: 17px;
+    margin-right: 17px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-left: 6px;
+    
+}
+
+.reviews-show h2 {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    margin-left: 17px;
+    margin-right: 17px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-left: 6px;
+}
+
