--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -142,6 +142,8 @@ ul li {
   border-radius: 8px;
   flex-direction: column;
   width: 200%;
+  padding: 20px 20px;
+  
 }
 
 .dropdown-content img {
@@ -204,6 +206,39 @@ ul li {
   font-size: 12px;
 }
 
+.profile-dropdown:hover .dropdown-content {
+  display: flex;
+  border-radius: 8px;
+  flex-direction: column;
+  width: 200%;
+ 
+}
+
+.icon-greeting-drop {
+  display: flex;
+  padding-bottom: 10px;
+}
+
+.profile-icon-drop {
+  width: 34px;
+  padding-right: 15px;
+}
+
+.greeting-drop {
+  font-size: 14px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.logout-button button {
+  background-color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  border: none;
+  color: rgba(0, 0, 0, 0.76);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 
 .dropdown {
     position: relative;
