--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -19,6 +19,19 @@
 
 .login-container {
     display: flex;
+    padding-left: 17px;
+    border-left: 1px solid rgba(0, 0, 0, 0.145);
+}
+
+.login-container img {
+    height: 32px;
+    width: 32px;
+}
+
+.login-buttons {
+    display: flex;
+    margin-right: 5px;
+    
 }
 
 .login-button {
@@ -26,8 +39,8 @@
     background-color: black;
     border-radius: 99999px;
     font-size: 14px;
-    border-width: 2px;
-    min-width: 14.5em;
+    border: 2px solid black;
+    min-width: 14em;
     min-height: 44px;
     font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
@@ -40,6 +53,13 @@
     white-space: pre-wrap;
     overflow-wrap: break-word;
 }
+
+#demo-button {
+    margin-left: 5px;
+
+}
+
+
 
 .loginmodal-button {
     color: black;
