--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -286,8 +286,8 @@ ul li {
 }
 
 .nav2-link {
-  color: rgb(246, 242, 242);
-  font-family: Arial, Helvetica, sans-serif;
+  color: rgba(246, 242, 242, 0.874);
+  font-family: "helvetica neue", helvetica ,arial,sans-serif;
   font-size: 14px;
   padding: 3px;
   text-decoration-line: none;
