--- a/frontend/src/components/Products/Product.css
+++ b/frontend/src/components/Products/Product.css
@@ -191,14 +191,26 @@
     
 }
 
-.reviews-show h2 {
-    font-size: 20px;
+.reviews-show {
+    font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
     margin-left: 17px;
     margin-right: 17px;
     padding-bottom: 20px;
     padding-top: 20px;
     padding-left: 6px;
+
+}
+
+.reviews-show h2 {
+    font-size: 20px;
+    font-weight: 700;
+    padding-bottom: 10px;
+}
+
+.write-review-link {
+    color: rgb(19, 107, 234);
+    text-decoration: none;
+
 }
 
