--- a/frontend/src/components/Reviews/Review.css
+++ b/frontend/src/components/Reviews/Review.css
@@ -61,7 +61,8 @@
 }
 
 .product-review-info-container img {
-    width: 30%;
+    width: 40%;
+    padding-right: 17px;
 
 }
 
@@ -99,4 +100,47 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    padding-bottom: 12px;
+}
+
+.create-review-label h4 {
+    padding-bottom: 12px;
+    padding-top: 24px;
+}
+
+.create-review-label textarea {
+    height: 48px;
+    padding: 10px;
+}
+
+.create-button {
+    width: 14.5em;
+    min-height: 44px;
+    color: white;
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 99999px;
+    border: 1px solid black;
+    margin-top: 24px;
+    
+}
+
+.edit-review-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 24px;
+}
+
+
+.edit-review-form button {
+    margin-top: 24px;
+}
+
+.edit-review-link {
+    font-size: 12px;
+    color: red;
+    font-family: Arial, Helvetica, sans-serif;
 }
