--- a/frontend/src/components/Reviews/Review.css
+++ b/frontend/src/components/Reviews/Review.css
@@ -34,7 +34,7 @@
 }
 
 
-.create-review-form-wrapper {
+.review-form-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,7 +42,7 @@
 
 }
 
-.create-review-form-wrapper h1 {
+.review-form-wrapper h1 {
     white-space: pre-wrap;
     overflow-wrap: break-word;
     font-size: 24px;
@@ -53,14 +53,14 @@
     margin-bottom: 16px;
 }
 
-.product-review-info-container {
+.review-form-container {
     display: flex;
     width: 80vw;
     margin-top: 24px;
  
 }
 
-.product-review-info-container img {
+.review-form-container img {
     width: 40%;
     padding-right: 17px;
 
@@ -89,7 +89,7 @@
     text-decoration: underline;
 }
 
-.create-review-form {
+.review-form {
     display: flex;
     flex-direction: column;
     margin-top: 24px;
@@ -115,7 +115,7 @@
     padding: 10px;
 }
 
-.create-button {
+.review-form button {
     width: 14.5em;
     min-height: 44px;
     color: white;
@@ -127,17 +127,8 @@
     
 }
 
-.edit-review-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 24px;
-}
 
 
-.edit-review-form button {
-    margin-top: 24px;
-}
 
 .edit-review-link {
     font-size: 12px;
