--- a/frontend/src/components/Brands/brands.css
+++ b/frontend/src/components/Brands/brands.css
@@ -6,6 +6,7 @@
 .brand-heading {
     margin-right: 80px;
     font-size: 24px;
+    font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 1em;
     height: 100%;
@@ -25,12 +26,14 @@
     padding-right: 16px;
     margin-left: auto;
     margin-right: auto;
+    height: 100vh;
 }
 
 .brand-show-wrapper {
  padding-left: 150px;
  padding-top: 50px;
  display: flex;
+ height: 120vh;
  
  
 }
@@ -38,6 +41,7 @@
 .brand-show-container {
     display: flex;
     flex-wrap: wrap;
+   
 }
 
 .brand-show-item {
@@ -46,6 +50,7 @@
     display: flex;
     flex-direction: column;
     width: 12vw;
+    padding-top: 20px;
    
 }
 
@@ -63,4 +68,8 @@
 
 .show-link {
     font-size: 14px;
+}
+
+.brand-index {
+    font-family: Arial, Helvetica, sans-serif;
 }
