--- a/frontend/src/components/Home/home.css
+++ b/frontend/src/components/Home/home.css
@@ -1,3 +1,6 @@
+.home-wrapper{
+  height: 100vh;
+}
 .slide-img {
   margin-left: 10px;
   border-radius: 4px;
@@ -5,7 +8,7 @@
   flex-direction: column;
 }
 .slide-img img {
-  height: 440px;
+  height: 355px;
   user-select: none;
   margin-right: 15px;
   margin-top: 15px;
