--- a/frontend/src/components/Navbar2/Navbar2.css
+++ b/frontend/src/components/Navbar2/Navbar2.css
@@ -36,5 +36,23 @@
     padding-right: 20px;
   }
   
+  .category-show-wrapper {
+    height: 100vh;
+    padding-left: 150px;
+    padding-top: 50px;
+  }
+
+  .category-show-container {
+    display: flex;
+  }
+
+  .category-heading {
+    margin-right: 80px;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 1em;
+    height: 100%;
+    font-weight: 700;
+  }
   
   
