--- a/frontend/src/components/Home/home.css
+++ b/frontend/src/components/Home/home.css
@@ -1,5 +1,5 @@
 .home-wrapper{
-  height: 100vh;
+  height: 200vh;
 }
 .slide-img {
   margin-left: 10px;
@@ -28,5 +28,79 @@
   border-bottom-right-radius: 5px;
 }
 
+.new-prod-caro {
+  display: flex;
+  flex-direction: column;
+}
 
+.new-prod-caro h2 {
+  margin-left: 130px;
+  margin-top: 30px;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.new-prod-carousel-wrapper {
+  margin: 17px 130px;
+
+}
+
+.new-product-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  
+}
+
+.new-product-card {
+  width: 100%;
+  height: 100%;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  overflow: hidden;
+  text-align: left;
+  margin-right: 10px;
+}
+
+.new-product-image {
+  width: 100%;
+  height: auto;
+  
+}
+
+.new-product-details {
+  padding: 0px 12px;
+}
+
+.brand-prod-carousel {
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  display: -webkit-box !important;
+  
+}
+
+.name-prod-carousel {
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  display: -webkit-box !important;
+
+}
 
