--- a/frontend/src/components/Products/Product.css
+++ b/frontend/src/components/Products/Product.css
@@ -1,9 +1,11 @@
 .product-index-wrapper {
     display: flex;
-    padding-top: 30px;
     font-family: Arial, Helvetica, sans-serif;
-    justify-content: center;
+    height: 300vh;
+    padding-left: 150px;
+    padding-top: 50px;
 }
+
 
 .product-index-heading {
     font-size: 24px;
@@ -15,7 +17,7 @@
     display: flex;
     margin: 100px 0px;
     flex-wrap: wrap;
-    width: 50%;
+
     padding-left: 50px;
 }
 
@@ -119,19 +121,14 @@
 
 .index-image-container img {
     width: 100%;
-    height: 100%;
-    display: inline-block;
-    max-width: 100%;
-    top: 0px;
-    left: 0px;
-    object-fit: contain;
+    
 }
 
 
 .index-item {
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 14vw;
     min-height: 354px;
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
@@ -262,7 +259,8 @@
 
 .write-review-link {
     color: rgb(19, 107, 234);
-    text-decoration: none;
+    border: none;
+    background-color: transparent;
 
 }
 
