--- a/frontend/src/components/Home/home.css
+++ b/frontend/src/components/Home/home.css
@@ -1,5 +1,5 @@
 .home-wrapper{
-  height: 200vh;
+  height: 220vh;
 }
 .slide-img {
   margin-left: 10px;
@@ -8,7 +8,7 @@
   flex-direction: column;
 }
 .slide-img img {
-  height: 355px;
+  height: 330px;
   user-select: none;
   margin-right: 15px;
   margin-top: 15px;
@@ -23,7 +23,7 @@
 .slide-isle-link {
   display: flex;
   background-color: #FC6D89;
-  height: 12vh;
+  height: 17vh;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
@@ -31,7 +31,7 @@
 .slide-lips-link {
   display: flex;
   background-color: rgb(225, 147, 137);
-  height: 12vh;
+  height: 17vh;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
@@ -39,7 +39,7 @@
 .slide-farmacy-link {
   display: flex;
   background-color: rgb(183, 245, 157);
-  height: 12vh;
+  height: 17vh;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
@@ -47,7 +47,7 @@
 .slide-newprod-link{
   display: flex;
   background-color: #C5ABD3;
-  height: 12vh;
+  height: 17vh;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
@@ -55,25 +55,15 @@
 .slide-sunscreen-link{
   display: flex;
   background-color: rgb(250, 233, 156);
-  height: 12vh;
+  height: 17vh;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
-
-
 
 .slide-minis-link {
   display: flex;
   background-color: #FBCD53;
-  height: 12vh;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-
-}
-.slide-img-link {
-  display: flex;
-  background-color: black;
-  height: 12vh;
+  height: 17vh;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
@@ -210,10 +200,35 @@
 
 .category {
   display: flex;
+  margin-right: -17px;
+}
+.featured-categories-conatiner {
+  width: 80vw;
+}
+.featured-categories {
+  margin-left: 130px;
+  margin-right: 130px;
+  display: flex;
+  gap: 24px;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
-.featured-categories {
-  margin-left: 150px;
+.featured-categories h2 {
+  font-size: 20px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-right: 10px;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  line-height: 1.25;
+}
+
+.featured-subheading {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  padding-top: 8px;
 }
 
 .category-details {
