--- a/frontend/src/components/Loves/Loves.css
+++ b/frontend/src/components/Loves/Loves.css
@@ -53,6 +53,21 @@
     margin-right: 20px;
 }
 
+.brand-link {
+    text-decoration: none;
+    color: black;
+}
+
+.brand-link:hover {
+    text-decoration: underline;
+}
+
+.love-size {
+    font-size: 12px;
+    color: gray;
+   
+}
+
 .price-love {
     flex-basis: auto;
     padding-left: 16px;
