minor fixes and Footer done

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -136,6 +136,11 @@ ul li {
   padding-right: 17px;
 }
 
+.nav-store-link {
+  color: black;
+
+}
+
 .user-dropdown {
   position: relative;
   display: inline-block;
