--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,11 +1,16 @@
 .footer-container {
     display: flex;
+    justify-content: space-between;
     color: white;
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     width: 100vw;
     padding: 20px 0px;
+}
+
+.about-explore-container {
+    display: flex;
 }
 
 .footer-section {
@@ -27,7 +32,44 @@
     color: white;
     text-decoration: none;
     margin-top: 12px;
-    
-  
- 
+}
+
+.footer-links li {
+    color: white;
+    margin-top: 12px;
+    align-items: left;
+    text-align: left;
+}
+
+.footer-section-what {
+    display: flex;
+    flex-direction: column;
+    padding: 0px 20px;
+    text-align: left;
+    margin-left: 200px;
+}
+
+
+.footer-section-todo h4 {
+    font-weight: 700;
+    font-size: 14px
+   
+}
+
+.connect-links-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 50px;
+}
+
+.connect-links-container h4 {
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 12px;
+
+}
+
+.connect-links li {
+    margin-top: 12px;
 }
