--- a/frontend/src/components/Products/Product.css
+++ b/frontend/src/components/Products/Product.css
@@ -232,7 +232,9 @@
     line-height: 1.8;
 }
 
-.similar-products {
+
+
+/* .similar-products {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
@@ -242,7 +244,7 @@
     padding-top: 20px;
     padding-left: 6px;
     
-}
+} */
 
 .reviews-show {
     font-size: 14px;
@@ -265,6 +267,26 @@
     color: rgb(19, 107, 234);
     border: none;
     background-color: transparent;
-
 }
 
+.highlights-container {
+    grid-template-columns: repeat(3, 1fr);
+    line-height: 1.25;
+    font-size: 12px;
+    margin-bottom: 32px;
+    display: grid;
+    gap: 12px;
+    margin-left: 22px;
+}
+
+.highlights-container img {
+    width: 48px;
+}
+
+.highlights-container p {
+    margin-left: 10px;
+}
+
+.highlights-container li {
+    margin-top: -10px;
+}
