--- a/frontend/src/components/Products/Product.css
+++ b/frontend/src/components/Products/Product.css
@@ -167,6 +167,15 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.prod-show-link {
+    text-decoration: none;
+    color: black;
+}
+
+.prod-show-link:hover {
+    text-decoration: underline;
+}
+
 .show-link:hover {
     text-decoration: underline;
 }
@@ -320,7 +329,42 @@
     visibility: visible;
     opacity: 1;
   }
+
+  .category-links ul {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: left;
+  }
+
+  .category-links li {
+    transition: color 0.2s ease 0s;
+    display: inline-flex;
+    align-items: center;
+    line-height: 1.25;
+    font-size: 12px;
+    padding: 0.25em 12px;
+    gap: 8px;
+    min-height: 44px;
+    width: 170px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 6px;
+    border-radius: 4px;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: space-between;
+    margin-top: 10px;
+ 
+  }
   
+  .category-items {
+    display: flex;
+    flex-direction: column;
+
+    
+  }
+
+  .category-links img {
+    width: 28px;
+  }
   
   
   
